--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.490.0",
     "@aws-sdk/s3-request-presigner": "^3.490.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@tiptap/extension-blockquote": "^2.25.0",
     "@tiptap/extension-bold": "^2.25.0",
     "@tiptap/extension-bullet-list": "^2.25.0",
@@ -40,9 +41,9 @@
     "dompurify": "^3.3.0",
     "formidable": "^3.5.4",
     "lucide-react": "^0.344.0",
-    "next": "^14.0.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sanitize-html": "^2.17.0",
     "zod": "^4.1.12"
   },
@@ -54,7 +55,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.18",
     "typescript": "5.8.3"
   },
   "engines": {
