--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.1.1",
     "@types/node": "20.19.2",
     "@types/react": "18.3.23",
     "@types/react-dom": "^18.3.0",
