--- a/package.json
+++ b/package.json
@@ -49,14 +49,20 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^16.1.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "20.19.2",
     "@types/react": "18.3.23",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^4.1.18",
+    "ts-jest": "^29.4.6",
     "typescript": "5.8.3"
   },
   "engines": {
