--- a/package.json
+++ b/package.json
@@ -7,40 +7,18 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export",
     "vercel-build": "next build",
     "type-check": "tsc --noEmit",
-    "test": "jest"
+    "test": "jest",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.490.0",
-    "@aws-sdk/s3-request-presigner": "^3.490.0",
     "@tailwindcss/postcss": "^4.1.18",
-    "@tiptap/extension-blockquote": "^2.25.0",
-    "@tiptap/extension-bold": "^2.25.0",
-    "@tiptap/extension-bullet-list": "^2.25.0",
-    "@tiptap/extension-code": "^2.25.0",
-    "@tiptap/extension-code-block": "^2.25.0",
-    "@tiptap/extension-heading": "^2.25.0",
-    "@tiptap/extension-image": "^2.25.0",
-    "@tiptap/extension-italic": "^2.25.0",
-    "@tiptap/extension-link": "^2.25.0",
-    "@tiptap/extension-list-item": "^2.25.0",
-    "@tiptap/extension-ordered-list": "^2.25.0",
-    "@tiptap/extension-paragraph": "^2.25.0",
-    "@tiptap/extension-strike": "^2.25.0",
-    "@tiptap/extension-text-align": "^2.25.0",
-    "@tiptap/extension-underline": "^2.25.0",
-    "@tiptap/pm": "^2.25.0",
-    "@tiptap/react": "^2.25.0",
-    "@tiptap/starter-kit": "^2.25.0",
     "@types/dompurify": "^3.0.5",
-    "@types/formidable": "^3.4.5",
     "@types/sanitize-html": "^2.16.0",
     "@vercel/og": "^0.8.5",
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.0",
-    "formidable": "^3.5.4",
     "lucide-react": "^0.487.0",
     "next": "^16.1.1",
     "react": "^19.2.3",
