--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@testing-library/react": "^16.3.1",
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.2",
-    "@types/react": "18.3.23",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "^16.1.1",
     "jest": "^30.2.0",
