fix: M-12 to M-33 - localize dates, fix CSP, consolidate CSS/features/response helpers, validateConfig server-side, sitemap bounds, ARIA, focus-visible, interface cleanup, tsconfig strict

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
+    "noUncheckedIndexedAccess": true,
     "incremental": true,
     "plugins": [
       {
