feat: add signin, signup, profil prototype pages + Clerk env vars
- Signin: two-panel layout (form left, dark info panel right)
- Signup: reversed two-panel with phone field and password strength
- Profil: tabbed profile page (profile, saved jobs, settings)
- Added Clerk authentication variables to .env.example

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,20 @@ NEXT_PUBLIC_CMS_ENDPOINT=https://cms.nexjob.tech
 CMS_TOKEN=your-cms-api-token-here
 CMS_TIMEOUT=10000
 
+# Clerk Authentication (same Clerk project as CMS, different redirect URLs)
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_your-clerk-publishable-key
+CLERK_SECRET_KEY=sk_test_your-clerk-secret-key
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/signin
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/signup
+NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL=/
+NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/
+
+# Clerk Webhook (for user sync — get from Clerk Dashboard → Webhooks)
+CLERK_WEBHOOK_SECRET=whsec_your-webhook-signing-secret
+
+# Clerk Account Management URL
+NEXT_PUBLIC_CLERK_ACCOUNT_URL=https://accounts.clerk.dev/user
+
 # Storage Configuration (if needed for file uploads)
 STORAGE_ACCESS_KEY=your-storage-access-key
 STORAGE_SECRET_KEY=your-storage-secret-key
