feat: integrate Clerk authentication into nexjobsp
- Installed @clerk/nextjs and @clerk/localizations (Indonesian)
- ClerkProvider wraps app in providers.tsx with primary color theme
- proxy.ts: integrated clerkMiddleware with route protection (/profil)
- Deleted middleware.ts (conflicts with proxy.ts in Next.js 16)
- Replaced prototype signin/signup forms with Clerk <SignIn>/<SignUp>
- Two-panel layout preserved (dark info panel + Clerk form)

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.36.0",
+    "@clerk/nextjs": "^6.38.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/sanitize-html": "^2.16.0",
     "@vercel/og": "^0.8.5",
